2022-07-01  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/input.cpp (abort_request): Flush the standard
	error stream before exiting, to improve chances of user seeing
	any message as arguments to the `ab` request.

2022-06-28  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp
	(char_buffer::run_output_filter): Die if platform supports
	neither `fork()` nor `spawn()` for child process creation.

2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp (cleanup): Add function to tidy
	memory before exiting.
	(main): Register aforementioned function with `atexit()`.  Die
	if registration fails.

2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp (do_file): Die if `fclose()`
	fails; such a situation suggests a pretty hosed environment.

2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp (checkImageDir): If `mkdir()`
	fails, use `strerror()` to report the underlying problem.

2022-06-27  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/html/pre-html.cpp: Refactor.  Drop unnecessary
	prototype for static function.  Use idiomatic C++98 null pointer
	constant.  Annotate it as null pointer to ease any future
	migration to ISO C++11.  Boolify.  Use C++98 bool data type
	instead of preprocessor macros `TRUE` and `FALSE`.  Demote some
	global Boolean variables from `int` to `bool` and rename some to
	be more clear: `show_progress` -> `want_progress_report`;
	`debugging`; `eqn_flag` -> `need_eqn`.
	(make_message): Rename this...
	(make_string): ...to this.  Align more closely with contemporary
	version of example from Linux man-pages printf(3) page.  Use
	`vsnprintf()` to determine size of memory buffer needed prior to
	allocation instead of iteratively growing it until it is large
	enough.  Always die if `vsnprintf()` fails: this function now